# metube_pot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.claude/commands/: upstream-sync.md
.claude/rebase-plans/: 2026-01-10-upstream-sync.md
.github/workflows/: dev-build.yml  main.yml  update-yt-dlp.yml  upstream-sync-check.yml  upstream-sync-label.yml
app/: audio_sync_fix.py  dl_formats.py  jellyfin_nfo_generator.py  jellyfin_sync.py  main.py  telegram_bot.py  ytdl.py
app/extractors/: __init__.py  streamingcommunity.py
app/tests/: test_api.py  test_config.py  test_dl_formats.py  test_download_queue.py  test_jellyfin_sync.py  test_telegram_bot.py  test_ytdl_utils.py
ui/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
ui/src/: formats.json  styles.sass
ui/src/app/: app.html  app.sass  app.ts
ui/src/app/interfaces/: formats.ts
