[project]
name = "metube_tatoalo"
version = "1.0.0"
description = "Web GUI for youtube-dl (w/POT support)"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.2",
    "python-socketio==5.16.0",
    "yt-dlp[default,curl-cffi]",
    "mutagen==1.47.0",
    # yt-dlp[curl-cffi] requires curl-cffi<0.14 for CPython
    "curl-cffi>=0.5.10,<0.14",
    "watchfiles==1.1.1",
    "bgutil-ytdlp-pot-provider==1.2.2",
    "beautifulsoup4==4.14.3",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "ruff",
    "ty"
]
