[project]
name = "metube_tatoalo"
version = "1.0.0"
description = "Web GUI for youtube-dl (w/POT, StreamingCommunity, and Telegram support)"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.2",
    "python-socketio==5.16.0",
    "yt-dlp[default,curl-cffi,deno]",
    "mutagen==1.47.0",
    # yt-dlp[curl-cffi] requires curl-cffi<0.14 for CPython.
    "curl-cffi>=0.5.10,<0.14",
    "watchfiles==1.1.1",
    "yt-dlp-ejs>=0.8.0",
    "beautifulsoup4==4.14.3",
    "requests==2.32.5",
    "python-telegram-bot==21.11.1",
]

[dependency-groups]
dev = [
    "pylint",
    "pytest>=8.0",
    "pytest-aiohttp>=1.0",
    "pytest-asyncio>=0.24",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = [".", "app"]
addopts = "-v"
